--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,11 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"W A I F U", 
-"NomorOwner":"6281220670449", 
-"NamaOwner":"KurrGamtenk", 
+"NamaBot":"Harcy bot", 
+"NomorOwner":"6285607653803", 
+"NamaOwner":"Harcy", 
 "Dana":"081220670449", 
-"Ovo":"081220670449", 
-"Gopay":"081220670449", 
+"Pulsa":"085607653803", 
+"Gopay":"scan pp bot", 
 "HunterApi":"Ikyy69"
 }
